--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -131,7 +131,7 @@
 <div class="brand-heritage-wrapper">
   
         <div class="brand-heritage" >
-            <h1 class="text-center title-parg">Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
+            <h1 class="text-center title-parg" style="padding:10px;">Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
             <div class="row">
                 <div class="col-md-6 col-xs-12"> <img src="/public/brand/realty.jpg"></div>
                 <div class="col-md-6 col-xs-12">   <p class="career-desc">
@@ -168,14 +168,13 @@
     </p></div>
         
             </div>
-  
             <div class="row">
-               <div class="col-md-6 col-xs-12"> <p class="career-desc">
-                We will continue to strive to be a company that is well-acquainted with a wide range of real estate transactions and that customers can rely on us as a one-stop “real estate specialist” for all types of real estate needs. 
-            </p> </div>  <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_02.jpg"></div>
-           
-              
-                  </div>
+                <div class="col-md-6 col-xs-12" style="float:right">   <img src="/public/brand/list_sothebys_02.jpg"></div><div class="col-md-6 col-xs-12"> <p class="career-desc">
+                 We will continue to strive to be a company that is well-acquainted with a wide range of real estate transactions and that customers can rely on us as a one-stop “real estate specialist” for all types of real estate needs. 
+             </p> </div>  
+            
+               
+                   </div>
                   <div class="row">
                     <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_03.jpg"></div>
                     <div class="col-md-6 col-xs-12">    <p class="career-desc">
@@ -184,10 +183,10 @@
                     
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-xs-12">    <p class="career-desc">
+                            <div class="col-md-6 col-xs-12" style="float:right">   <img src="/public/brand/list_sothebys_04.png"></div><div class="col-md-6 col-xs-12">    <p class="career-desc">
                                 List Group consistently deals in every field of real-estate business incorporating the comprehensive strengths of “Sotheby’s International Realty®” of a worldwide network which combines the actual achievement and the trust we have developed so far in property project. We always make an effort to create new possibilities for regarding real-estate as our keywords “flow, stock and cross borders”. 
                             </p>
-                              </div>     <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_04.png"></div>
+                              </div>     
                          
                           
                               </div>
