--- a/app/view/buy/search-side.html
+++ b/app/view/buy/search-side.html
@@ -166,7 +166,7 @@
       console.log('hahah');
     });
 
-    var districtMapping = {{ districtSource| safe }
+    var districtMapping = {{ districtSource|safe }}
   };
   var $dist = $('#district');
   $('#location').change(function () {
