--- a/app/view/search/search.html
+++ b/app/view/search/search.html
@@ -17,7 +17,7 @@
       <a href="#">Property Search</a>
     </div>
     <form action="/{{activeMenu}}-result" method="get" class="search-form">
-      <div class="row">
+      <div class="row" class="mt30">
         <div class="col-md-12">{{forms.autoComplete('keyword_search', 'KEYWORDS')}}</div>
       </div>
       <div class="row">
