style: add margin-0 in building info.

--- a/app/view/buy/detail.html
+++ b/app/view/buy/detail.html
@@ -132,7 +132,7 @@
             <div class="box-content">
               {% for item in property.buildInfo %}
                 <h2>{{ __(item.key) }}</h2>
-                <span>{{ item.value }}</span>
+                <span style="margin: 0;">{{ item.value }}</span>
               {% endfor %}
             </div>
           </div>
@@ -148,7 +148,7 @@
             <div class="box-content">
               {% for item in property.districtInfo %}
                 <h2>{{ __(item.key) }}</h2>
-                <span>{{ item.value }}</span>
+                <span style="margin: 0;">{{ item.value }}</span>
               {% endfor %}
             </div>
           </div>
