--- a/app/view/search/search.html
+++ b/app/view/search/search.html
@@ -16,7 +16,7 @@
       <a href="#">{{"Buy" if activeMenu == 'buy' else 'Rent'}} ></a>
       <a href="#">Property Search</a>
     </div>
-    <form action="/{{activeMenu}}-result" method="get" class="search-form">
+    <form id="search-form" action="/{{activeMenu}}-result" method="get" class="search-form">
       <div class="row" class="mt30">
         <div class="col-md-12">{{forms.autoComplete('keyword_search', 'KEYWORDS')}}</div>
       </div>
@@ -126,7 +126,9 @@
         $(window).keydown(function(event){
           if(event.keyCode == 13) {
             event.preventDefault();
-            return false;
+            setTimeout(function() {
+              $('#search-form').submit();
+            },200);
           }
         });
       });
