--- a/app/view/our-team/member-detail.html
+++ b/app/view/our-team/member-detail.html
@@ -1,6 +1,6 @@
 <div id="agent-detail-dialog" class="dialog-wrapper">
   <div class="dialog-scroll">
-    <div class="dialog" style="max-width: 500px;">
+    <div class="dialog" style="max-width:640px;">
       <div class="dialog-header">
         <div class="dialog-close"><i class="fa fa-times"></i></div>
       </div>
@@ -15,6 +15,7 @@
               <div id="agent-detail-dialog-name" class="name"></div>
               <div id="agent-detail-dialog-title" class="com-title"></div>
               <div id="agent-detail-dialog-licence-wrapper" class="detail-info">Licence No. <span id="agent-detail-dialog-licence"></span></div>
+              <div class="detail-info">Email<span id="agent-detail-dialog-email"></span></div>
               <div class="detail-info">Direct <span id="agent-detail-dialog-direct"></span></div>
               <div class="detail-info">Mobile <span id="agent-detail-dialog-mobile"></span></div>
             </div>
