--- a/app/view/international/international.html
+++ b/app/view/international/international.html
@@ -90,7 +90,7 @@
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
                     <label for="enquiry-box-mobile">PHONE </label> 
-                    <input maxlength="255" autocomplete="off" name="enquiry-box-mobile" value="" type="text" id="enquiry-box-mobile" /> 
+                    <input class="contact-group" maxlength="255" autocomplete="off" name="enquiry-box-mobile" value="" type="text" id="enquiry-box-mobile" /> 
                     <div class="xline"></div> 
                   </div> 
                 </div> 
@@ -99,7 +99,7 @@
                 <div class="col-md-12 field-row"> 
                   <div class="input-field"> 
                     <label for="enquiry-box-email">EMAIL </label> 
-                    <input maxlength="255" autocomplete="off" name="enquiry-box-email" value="" type="text" id="enquiry-box-email" /> 
+                    <input class="contact-group" maxlength="255" autocomplete="off" name="enquiry-box-email" value="" type="text" id="enquiry-box-email" /> 
                     <div class="xline"></div> 
                   </div> 
                 </div> 
@@ -151,18 +151,18 @@
               $('#enquiry-box-form').validate({
                 rules: {
                   "enquiry-box-email": {
-                    required: true,
-                    email: true
+                    email: true,
+                    require_from_group: [1, ".contact-group"]
                   },
                   "enquiry-box-name": {
                     required: true
                   },
                   "enquiry-box-budget": {
-                    required: true,
                     number: true
                   },
                   "enquiry-box-mobile": {
-                    mobile: true
+                    mobile: true,
+                    require_from_group: [1, ".contact-group"]
                   }
                 }
               });
