--- a/app/style/main.less
+++ b/app/style/main.less
@@ -102,7 +102,7 @@ label.error {
   }
   .img {
     position: absolute;
-    width: 50%;
+    width: 250px;
     left: 20px;
     bottom: 30px;
   }
