--- a/app/view/about/csr.html
+++ b/app/view/about/csr.html
@@ -22,7 +22,7 @@
   <div class="csr-wrapper">
     <div class="csr-wrapper-item">
       <div class="o-smartimage">
-        <img src="/public/images/csr/csr-bg.jpg" style="max-width: none; max-height: none; min-width: 100%; min-height: 100%; width: 100%; height: auto;">
+        <img src="/public/images/csr/csr-bg.jpg">
       </div>
 
       <span class="s-title-on-image">
