--- a/app/style/about.less
+++ b/app/style/about.less
@@ -369,54 +369,48 @@
     font-size: 1rem;
     position: relative;
 
-   .image-holder{max-height: 680px;
-    // min-height: 215px;
-} 
+//    .image-holder{max-height: 680px;
+//     // min-height: 215px;
+// } 
 
     .o-smartimage,.s-title-smartimage {
       display: block;
       overflow: hidden;
       -webkit-transition: all .1s ease-out;
       transition: all .1s ease-out;
-      position: relative;
+      // position: relative;
       direction: ltr;
       z-index: 1;
       width: 100%;
-      height: 100%;
+      // height: 100%;
       font-size: 0;
       text-align: center;
-      position: relative;
+      // position: relative;
       img{
         border: 0;
-        max-width: none;
-        max-height: none;
         min-width: 100%;
-        min-height: 100%;
         width: 100%;
         height: auto;
-        position: relative;
         z-index: 2;
         margin: auto;
-        text-indent: 100%;
-        white-space: nowrap;
         overflow: hidden;
-        color: #fff;
       }
  
     }
-    .s-title-smartimage img{
-      margin-top: -35%;
-    }
+    // .s-title-smartimage img{
+    //   margin-top: -35%;
+    // }
     .s-title-on-image-sec{
       width: 50%;
       z-index: 3;
       position: absolute;
-      top: 9%;
+      top: 10%;
       left: 50%;
       -webkit-transform: translate(-50%,-50%);
       transform: translate(-50%,-50%);
       text-align: center;
-      margin-top: 70px;
+      margin-top: 100px;
+  }
       h2{
         padding-bottom: 40px;
         color: #333;
@@ -461,7 +455,6 @@
       }
   }
     }
-}
 
 
 // contact us
@@ -920,13 +913,17 @@
   
 
 .s-title-on-image-sec{
+  width: 80%!important;
   margin-top: 50px!important;
   h2{
     font-size: 1em!important;
-    padding-bottom: 10px!important;
+    padding-bottom: 6px!important;
   }
   .s-text{
     font-size: .6em!important;
+    br{
+      display: none!important;
+    }
   }
 }
 
