--- a/app/view/about/csr.html
+++ b/app/view/about/csr.html
@@ -54,7 +54,7 @@
     </div>
     <div class="csr-wrapper-item">
       <div class="s-title-smartimage image-holder">
-        <img src="../public/images/csr/localimagereader01.png">
+        <img src="/public/images/csr/localimagereader01.png">
 
 
       </div>
@@ -75,7 +75,7 @@
     </div>
     <div class="csr-wrapper-item ">
       <div class="s-title-smartimage image-holder">
-        <img src="../public/images/csr/localimagereader02.png">
+        <img src="/public/images/csr/localimagereader02.png">
 
 
       </div>
