--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -135,14 +135,14 @@
             <div class="row">
                 <div class="col-md-6 col-xs-12"> <img src="/public/brand/realty.jpg"></div>
                 <div class="col-md-6 col-xs-12">   <p class="career-desc">
-                    Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more thantwo centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive propertiesit represents.
+                    Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents.
                 </p>
                 <p class="career-desc">
-                    The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.
+                    The Sotheby's International Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby's International Realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.
                 </p></div>
   
                     </div>
-  
+   
   
   
         </div>
@@ -154,7 +154,7 @@
              
           
   
-  
+   
       <h1 class="text-center title-parg">List Group</h1>
   
   
@@ -164,7 +164,7 @@
         <div class="col-md-6 col-xs-12"> <p class="career-desc">
           The List Company was established in 1991, immediately after the real estate bubble burst in Japan. The focus of our organization was to transform the real estate industry that was in a period of chaos at the time, and restore the real value of real estate and trust in real estate as an asset. 
       </p><p class="career-desc">
-        Starting with real estate brokerage and marketing business, we have expanded the range of our business one step at a time from the sales of high quality original brand condominium and detached houses to town development business, during which time we have acquired an extensive track record and a wealth of unique know-hows.
+        Starting with real estate brokerage and marketing business, we have expanded the range of our business one step at a time from the sales of high quality original brand condominiums and detached houses to town development business, during which time we have acquired an extensive track record and a wealth of unique know-hows.
     </p></div>
         
             </div>
@@ -196,7 +196,7 @@
     <p class="career-desc">
         Adding to the List Group family, List Sotheby’s International Realty is proud to announce its new office opening in Hong Kong, beside offices in Japan, Hawaii, Philippines and Singapore. The Group will soon open a new office in Bangkok, Thailand to serve luxury residential property clients in 2018.
     </p>
-    <p class="career-desc" style="padding-bottom:30px;">List Sotheby’s International Realty continues to expand in Hong Kong List Sotheby’s International Realty in Hong Kong is now building a carefully selected team of dynamic staff. Hiring criteria and continuous training will be rigorous to ensure the quality of service standards and compliance to the brand philosophy. Starting with a first office on Hong Kong Island, an addition of a Kowloon office is expected to take place in due course.</p>
+    <p class="career-desc" style="padding-bottom:30px;">List Sotheby’s International Realty continues to expand in Hong Kong. List Sotheby’s International Realty in Hong Kong is now building a carefully selected team of dynamic staff. Hiring criteria and continuous training will be rigorous to ensure the quality of service standards and compliance to the brand philosophy. Starting with a first office on Hong Kong Island, an addition of a Kowloon office is expected to take place in due course.</p>
   </div>
   {% include "../base/footer.html" %}
 </body>
