--- a/app/view/about/management.html
+++ b/app/view/about/management.html
@@ -30,7 +30,7 @@
     <div class="management-pic-wrapper">
       <img src="/public/images/management/Yasushi_Yamada.jpg" alt="Management">
       <h4 style="font-size:18px;">Yasushi Yamada</h4>
-      <p>Chief Operation Officer, List Holdings Singapore Pte. Ltd</p>
+      <p>Chief Operating Officer, List Holdings Singapore Pte. Ltd</p>
     </div>
     <div class="management-wrapper">    <p class="career-desc">
         Mr. Yamada has more than two decades of experience in real estate finance with a strong track record in transactions and has built up an extensive network in Japan and overseas.
